--- a/src/cinnamon-screensaver-gtk3.20.css
+++ b/src/cinnamon-screensaver-gtk3.20.css
@@ -2,14 +2,14 @@
 }
 
 .csstage .unlockbox {
-    color: #eeeeee;
+    color: #ffffff;
     font-size: 20px;
-    text-shadow: 1px 1px alpha(black, 0.8);
+    text-shadow: 5px 5px #E5E5E5CC; 
 }
 
 .csstage .clock {
-    color: #eeeeee;
-    text-shadow: 1px 1px alpha(black, 0.8);
+    color: #ffffff;
+    text-shadow: 5px 5px #E5E5E5CC; 
 }
 
 .csstage .toppanel {
@@ -21,15 +21,11 @@
 }
 
 .csstage .audiopanel {
-    border-width: 0 1px 1px 0;
-    border-radius: 0 0 3px 0;
-    background-color: rgba(255, 255, 255, .05);
+
 }
 
 .csstage .infopanel {
-    border-width: 0 0 1px 1px;
-    border-radius: 0 0 0 3px;
-    background-color: rgba(255, 255, 255, .05);
+
 }
 
 .csstage .notificationwidget,
@@ -39,7 +35,7 @@
     color: white;
     background-color: transparent;
     background-image: none;
-    text-shadow: 1px 1px alpha(black, 0.8);
+    text-shadow: 1px 1px #E5E5E5CC;
     padding: 6px;
 }
 
@@ -53,26 +49,11 @@
     color: orange;
 }
 
-.csstage .framedimage {
-    border-radius: 4px;
-    border: 4px solid;
-    background-color: alpha(grey, .25);
-    background-clip: border-box;
-    border-color: @theme_selected_bg_color;
-    box-shadow: 1px 1px alpha(black, 0.8);
-}
-
 .csstage .passwordentry {
     font-size: 15px;
-    box-shadow: none;
-    border-color: alpha(white, .2);
-    border-style: solid;
+    border: none;
     color: white;
-    background-image: none;
-    background-color: transparent;
-    border-image: none;
-    border-width: 1px;
-    box-shadow: none;
+    background-color: rgba(229, 229, 229, .2);
 }
 
 .csstage .passwordentry progress {
@@ -80,7 +61,6 @@
     padding: 0;
     border-radius: 0;
     border-width: 0 0 2px;
-    border-color: alpha(@theme_selected_bg_color, .7);
 }
 
 .csstage .passwordentry progress:focus {
@@ -100,7 +80,6 @@
 
 .csstage .transparentbutton {
     -gtk-icon-style: requested;
-    border-color: alpha(white, .2);
     border-image: none;
     box-shadow: none;
     background-image: none;
@@ -118,13 +97,12 @@
 }
 
 .csstage .transparentbutton:disabled image {
-    color: #333333;
+    color: #FFFFFF;
 }
 
-.csstage .passwordentry:focus,
+/*.csstage .passwordentry:focus,
 .csstage .transparentbutton:focus {
     background-color: alpha(grey, .3);
-    border-color: @theme_selected_bg_color;
     box-shadow: 1px 1px alpha(white, 0.1);
 }
 
@@ -137,24 +115,21 @@
 
 .csstage .passwordentry:hover:focus,
 .csstage .transparentbutton:hover:focus {
-    border-color: @theme_selected_bg_color;
     background-color: alpha(grey, .4);
     box-shadow: 1px 1px alpha(white, 0.1);
 }
 
 .csstage .passwordentry:active,
 .csstage .transparentbutton:active {
-    border-color: @theme_selected_bg_color;
     background-color: alpha(grey, .6);
     box-shadow: 1px 1px alpha(white, 0.1);
 }
 
 .csstage .passwordentry:active:focus,
 .csstage .transparentbutton:active:focus {
-    border-color: @theme_selected_bg_color;
     background-color: alpha(grey, .9);
     box-shadow: 1px 1px alpha(white, 0.1);
-}
+}*/
 
 .csstage .volumeslider {
     min-height: 24px;
@@ -176,7 +151,7 @@
 .csstage .trackname {
     font-family: monospace;
     font-size: 12px;
-    text-shadow: 1px 1px alpha(black, 0.8);
+    text-shadow: 1px 1px #E5E5E5CC;
     background-image: none;
     background-color: transparent;
 }
@@ -184,7 +159,7 @@
 .csstage .albumartist {
     font-family: monospace;
     font-size: 8px;
-    text-shadow: 1px 1px alpha(black, 0.8);
+    text-shadow: 1px 1px #E5E5E5CC;
     background-image: none;
     background-color: transparent;
 }
